# task_simple

./: Cargo.toml  README.md
examples/simple_example/: Cargo.toml  LICENSE-APACHE  README.md  index.html
examples/simple_example/src/: app.rs  doubling_worker.rs  file_worker.rs  lib.rs  main.rs
src/: lib.rs  ongoing_task.rs  task.rs  wasm_task.rs
src/ongoing_task/: std_task.rs  wasm_task.rs
src/task/: std_task.rs  ticket.rs
