[package]
name = "simple_example"
version = "0.1.0"
authors = ["Michael Völkl <michaelvoelkl@zoho.com>"]
edition = "2021"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
egui = "0.27.0"
eframe = { version = "0.27.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
task_simple = { path = "../../" }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1.7"

[profile.release]
opt-level = 2 # fast and small wasm

[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

[[bin]]
name = "doubling_worker"
path = "src/doubling_worker.rs"
[[bin]]
name = "file_worker"
path = "src/file_worker.rs"
